cluster-home/hello-example1.yaml
# https://www.youtube.com/watch?v=VzQetbvXCAw
# 17/10/21
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hello
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: hello
        version: v1
    spec:
      containers:
      - name: hello
        image: wardviaene/http-echo
        ports:
        - name: http
          containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: hello
  labels:
    app: hello
spec:
  selector:
    app:hello
  ports:
  - name: http
    port: 8080
    targetPort: 8080
