cluster-home/productpage-svc.yaml
# istio samples - 15/10/21
apiVersion: v1
kind: Service
metadata:
  name: productpage-svc
spec:
  type: NodePort
  selector:
    app: productpage
  ports:
      # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - port: 9080
      targetPort: 9080
      # Optional field
      # By default and for convenience, the Kubernetes control plane will allocate a port from a range (default: 30000-32767)
      nodePort: 30007
